--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.css">
 	</head>
 	<body>
-		<div class="jumbotron text-center">
+		<div class="text-center">
 			<h1>Network Monitor</h1>
 		</div>
 		<div class="container">
