--- a/main.html
+++ b/main.html
@@ -58,9 +58,11 @@
 					<span class="col-md-8">Pacotes HTTP: </span>         <span class="col-md-4">0</span>
 					<span class="col-md-8">Pacotes HTTPS: </span>        <span class="col-md-4">0</span>
 					<span class="col-md-8">Pacotes DNS: </span>          <span class="col-md-4">0</span>
+					<span class="col-md-8">Pacotes NTP: </span>          <span class="col-md-4">0</span>
 					<span class="col-md-8">Pacotes HTTP(%): </span>      <span class="col-md-4">0</span>
 					<span class="col-md-8">Pacotes HTTPS(%): </span>     <span class="col-md-4">0</span>
 					<span class="col-md-8">Pacotes DNS(%): </span>       <span class="col-md-4">0</span>
+					<span class="col-md-8">Pacotes NTP(%): </span>       <span class="col-md-4">0</span>
 					<span class="col-md-8">Sites mais Acessados: </span> <span class="col-md-4">0</span>
 				</div>
 				<p>Sites mais acessadas</p>
